# bottec_test

./: .gitignore  Dockerfile  README.md  api.sh  currency_update.sh  dev.env  docker-compose.yml  pyproject.toml  requirements.txt
alembic/: env.py
alembic/versions/: 3b2888f673bd_create_currency_rate_table.py  d7bcf4c6ee7f_create_currency_table.py
app/: api.py  currency_update.py
app/applications/: currency.py
app/core/: config.py  db.py  retry.py
app/models/: currency.py
app/routers/: exceptions.py  rates.py
app/schemas/: exc_rates_api.py  rates.py
app/services/: currency_update.py  exc_rates_api.py
tests/: request_mocks_data.py  test_main.py
